Add guessActivity but missing custom view for letter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         <activity
             android:name=".GameActivity"
             android:label="@string/title_activity_game"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GuessActivity"
+            android:label="@string/title_activity_guess"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
