--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,21 +24,21 @@
             android:value="CLIENT_KEY" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".PhotoActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".DrawActivity"
             android:label="@string/title_activity_draw"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".GameActivity"
-            android:label="@string/title_activity_game"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".GuessActivity"
@@ -48,11 +48,7 @@
             android:name=".HolidayActivity"
             android:label="@string/title_activity_holiday"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
